# prithvi

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt
