[project]
name = "prithvi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=0.30.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
